# orbstack-machine-nixos-flakes

./: .gitignore  README.md  bootstrap-nixos.sh  configuration.nix  flake.nix  orbstack-machine-nixos-flakes.py  orbstack-nixos-provision.py  provision-orbstack.py  provision-orbstack.sh  pyproject.toml  pytest.ini
nix-extra-config/: README.md
nix-extra-config/lib/: docker.nix
orbstack-nix-config/: README.md  configuration.nix  flake.nix
orbstack-nix-config/extra/: README.md
orbstack-nix-config/extra/examples/: include-lib.nix  simple.nix
orbstack-nix-config/extra/lib/: docker.nix
tests/: README.md  __init__.py  conftest.py  test_architecture.py  test_e2e.py  test_extra_config.py  test_machine_creation.py  test_nix_extra_config_dir.py  test_nix_flakes.py  utils.py
tests/fixtures/: README.md
