[project]
name = "orbstack-machine-nixos-flakes"
version = "0.1.0"
description = "OrbStack NixOS machine provisioning with Nix flakes"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0",
    "pytest-sugar>=0.9.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--log-cli-level=INFO",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_orbstack: marks tests that require OrbStack to be installed",
]
timeout = 300
timeout_method = "thread"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py313"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
